app/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cldinf-ingress
  namespace: cldinf-app
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cldinf-k8s-g5.network.garden
    secretName: cldinf-web-tls
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cldinf-web
            port:
              number: 80
      - pathType: Prefix
        path: /healthz
        backend:
          service:
            name: cldinf-web
            port:
              number: 80
